# social-post-reader

./: .coverage  .gitignore  .social-post-reader.toml.example  README.md  config.py  fetcher.py  main.py  pyproject.toml  scorer.py  social_post_reader.py  store.py
src/: main.py
src/social_reader/: fetcher.py  logic.py  scorer.py  store.py
tests/: test_config.py  test_fetcher.py  test_logic.py  test_scorer.py  test_store.py
tests/fixtures/: sample_bluesky_posts.json  sample_mastodon_posts.json
