[project]
name = "social-post-reader"
version = "0.1.0"
description = "Daily digest of social posts worth replying to, with LLM-generated angles"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "local-first-common",
    "requests>=2.32.5",
    "typer>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "social_post_reader.py",
    "fetcher.py",
    "scorer.py",
    "store.py",
    "config.py",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv.sources]
local-first-common = { git = "https://github.com/jamalhansen/local-first-common.git", rev = "main" }
